--- a/index.html
+++ b/index.html
@@ -88,37 +88,40 @@
       monitoring = true;
 
       const check = () => {
-        if (!monitoring || !analyser || isPlaying || !audioContext || audioContext.state !== "running") return;
+  // Stop checking if we're playing back or monitoring is off
+  if (isPlaying || !monitoring || !analyser || !audioContext || audioContext.state !== "running") {
+    cancelAnimationFrame(animationId);
+    return;
+  }
 
-        try {
-          analyser.getByteTimeDomainData(data);
-        } catch (err) {
-          console.warn("⛔ Tried reading from analyser after cleanup:", err);
-          return;
-        }
+  try {
+    analyser.getByteTimeDomainData(data);
+  } catch (err) {
+    console.warn("⛔ Tried reading from analyser after cleanup:", err);
+    cancelAnimationFrame(animationId);
+    return;
+  }
 
-        let max = 0;
-        for (let i = 0; i < data.length; i++) {
-          const deviation = Math.abs(data[i] - 128);
-          if (deviation > max) max = deviation;
-        }
+  let max = 0;
+  for (let i = 0; i < data.length; i++) {
+    const deviation = Math.abs(data[i] - 128);
+    if (deviation > max) max = deviation;
+  }
 
-        if (max < 10) {
-          if (!silenceTimer) {
-            silenceTimer = setTimeout(() => {
-              stopRecording();
-            }, 1000);
-          }
-        } else {
-          clearTimeout(silenceTimer);
-          silenceTimer = null;
-        }
-
-        animationId = requestAnimationFrame(check);
-      };
-
-      check();
+  if (max < 10) {
+    if (!silenceTimer) {
+      silenceTimer = setTimeout(() => {
+        stopRecording();
+      }, 1000);
     }
+  } else {
+    clearTimeout(silenceTimer);
+    silenceTimer = null;
+  }
+
+  animationId = requestAnimationFrame(check);
+};
+
 
     function stopRecording() {
       if (mediaRecorder && mediaRecorder.state !== "inactive") {
