--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         mediaRecorder.ondataavailable = e => audioChunks.push(e.data);
 
         mediaRecorder.onstop = async () => {
-          monitoring = false;
           cancelAnimationFrame(animationId);
+          monitoring = false;
           console.log("📤 Sending to backend...");
           const audioBlob = new Blob(audioChunks, { type: 'audio/webm' });
           const formData = new FormData();
@@ -88,40 +88,41 @@
       monitoring = true;
 
       const check = () => {
-  // Stop checking if we're playing back or monitoring is off
-  if (isPlaying || !monitoring || !analyser || !audioContext || audioContext.state !== "running") {
-    cancelAnimationFrame(animationId);
-    return;
-  }
+        if (isPlaying || !monitoring || !analyser || !audioContext || audioContext.state !== "running") {
+          cancelAnimationFrame(animationId);
+          return;
+        }
 
-  try {
-    analyser.getByteTimeDomainData(data);
-  } catch (err) {
-    console.warn("⛔ Tried reading from analyser after cleanup:", err);
-    cancelAnimationFrame(animationId);
-    return;
-  }
+        try {
+          analyser.getByteTimeDomainData(data);
+        } catch (err) {
+          console.warn("⛔ Tried reading from analyser after cleanup:", err);
+          cancelAnimationFrame(animationId);
+          return;
+        }
 
-  let max = 0;
-  for (let i = 0; i < data.length; i++) {
-    const deviation = Math.abs(data[i] - 128);
-    if (deviation > max) max = deviation;
-  }
+        let max = 0;
+        for (let i = 0; i < data.length; i++) {
+          const deviation = Math.abs(data[i] - 128);
+          if (deviation > max) max = deviation;
+        }
 
-  if (max < 10) {
-    if (!silenceTimer) {
-      silenceTimer = setTimeout(() => {
-        stopRecording();
-      }, 1000);
+        if (max < 10) {
+          if (!silenceTimer) {
+            silenceTimer = setTimeout(() => {
+              if (!isPlaying) stopRecording();
+            }, 1000);
+          }
+        } else {
+          clearTimeout(silenceTimer);
+          silenceTimer = null;
+        }
+
+        animationId = requestAnimationFrame(check);
+      };
+
+      check();
     }
-  } else {
-    clearTimeout(silenceTimer);
-    silenceTimer = null;
-  }
-
-  animationId = requestAnimationFrame(check);
-};
-
 
     function stopRecording() {
       if (mediaRecorder && mediaRecorder.state !== "inactive") {
