--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     let audioChunks = [];
     let audioContext = null;
     let analyser = null;
-    let silenceTimer = null;
-    let isPlaying = false;
     let monitoring = false;
     let animationId = null;
+    let isPlaying = false;
     let hasUserSpoken = false;
+    let speechStartTime = null;
 
     async function startRecording() {
       if (isPlaying) return;
@@ -32,6 +32,7 @@
         mediaRecorder = new MediaRecorder(stream);
         audioChunks = [];
         hasUserSpoken = false;
+        speechStartTime = null;
 
         mediaRecorder.ondataavailable = e => audioChunks.push(e.data);
 
@@ -66,7 +67,7 @@
         mediaRecorder.start();
         setTimeout(() => {
           monitorSilence();
-        }, 1000); // Give 1s buffer before checking for silence
+        }, 1500); // Let user start speaking
 
       } catch (err) {
         console.error("Mic access failed:", err);
@@ -119,17 +120,24 @@
           if (deviation > max) max = deviation;
         }
 
-        console.log("🔍 Silence monitor running — user has spoken?", hasUserSpoken, " | max:", max);
-
         if (max > 10) {
-          hasUserSpoken = true;
+          if (!hasUserSpoken) {
+            hasUserSpoken = true;
+            speechStartTime = Date.now();
+          }
           silenceFrames = 0;
         } else {
           if (hasUserSpoken) {
-            silenceFrames++;
-            if (silenceFrames > 30) {
-              stopRecording();
-              return;
+            const elapsedSpeech = Date.now() - speechStartTime;
+            if (elapsedSpeech < 3000) {
+              // Don't allow silence to trigger stop yet
+              silenceFrames = 0;
+            } else {
+              silenceFrames++;
+              if (silenceFrames > 60) { // 60 frames = ~4-5 seconds
+                stopRecording();
+                return;
+              }
             }
           }
         }
@@ -178,8 +186,8 @@
       audioContext = null;
       analyser = null;
       mediaRecorder = null;
-      silenceTimer = null;
       hasUserSpoken = false;
+      speechStartTime = null;
     }
   </script>
 </body>
